[gd_scene load_steps=4 format=3 uid="uid://ywau1wgwfrqr"]

[ext_resource type="Script" uid="uid://bts8fq2n3ql0c" path="res://scripts/enemies/BaseEnemy.gd" id="1_koma5"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_5m4ql"]
radius = 0.75
height = 4.0

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_koma5"]
points = PackedVector3Array(0.742551, 1.22768, 0.099445, -0.716093, -1.33964, -0.1919, -0.723188, -1.3527, 0.158837, -0.559615, 1.74497, 0.0419383, 0.215548, -1.28024, -0.715516, 0.219224, -1.42213, 0.693157, -0.1919, 1.33964, -0.716093, -0.251716, 1.40692, 0.685872, 0.639525, -1.61414, -0.137466, 0.570437, 1.46991, -0.428936, 0.394205, 1.5295, 0.570674, -0.202115, -1.95746, -0.140902, -0.370031, -1.41058, 0.628811, 0.672322, -1.26348, 0.327708, -0.3102, -1.40615, -0.661691, -0.652959, 1.27199, -0.363894, -0.715516, 1.28024, 0.215548, 0.225169, 1.95055, -0.140363, 0.676361, -1.32914, -0.305829, 0.223475, -1.87445, 0.344351, 0.382628, 1.19798, -0.643979, -0.0785901, 1.87339, 0.404641, -0.0780393, 1.74194, -0.558623, 0.0411635, 1.28938, 0.74452, 0.162775, -1.87212, -0.380565, -0.541217, 1.33929, 0.50675, 0.499469, 1.26207, 0.556887, -0.317117, -1.79515, 0.400815, 0.521632, 1.73958, 0.221784, -0.5303, -1.19877, -0.5303, -0.13314, -1.21928, 0.737552, 0.50675, -1.33929, -0.541217)

[node name="BaseEnemy" type="CharacterBody3D"]
collision_layer = 128
collision_mask = 5
script = ExtResource("1_koma5")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_5m4ql")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("ConvexPolygonShape3D_koma5")

[node name="AttackTimer" type="Timer" parent="."]

[node name="StateTimer" type="Timer" parent="."]

[node name="RayCast3D" type="RayCast3D" parent="."]
target_position = Vector3(0, 0, -3)
